--- a/index1.html
+++ b/index1.html
@@ -44,6 +44,15 @@ background: linear-gradient(133deg, rgba(0,29,45,1) 0%, rgba(42,88,116,1) 57%, r
         .service-card .btn {
             margin-top: 15px;
         }
+        .service-card {
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.service-card:hover {
+    transform: scale(1.05);
+    box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.2);
+}
+
     </style>
 </head>
 
