--- a/index1.html
+++ b/index1.html
@@ -46,6 +46,10 @@ background: linear-gradient(133deg, rgba(0,29,45,1) 0%, rgba(42,88,116,1) 57%, r
         }
         .service-card {
     transition: transform 0.3s ease, box-shadow 0.3s ease;
+            
+}
+.card-body, .form-control, .form-select, .btn {
+            border-radius: 17px; /* Adding border-radius to the containers inside */
 }
 
 .service-card:hover {
@@ -97,10 +101,11 @@ background: linear-gradient(133deg, rgba(0,29,45,1) 0%, rgba(42,88,116,1) 57%, r
                     </div>
                     <div class="mb-3">
                         <label for="issue" class="form-label">Select Issue</label>
+                        <br>
                         <select id="issue" class="form-select" required>
-                            <option value="" disabled selected>Select an issue</option>
+                            <option value="" disabled selected>Select the Purpose</option>
                             <option value="Account Opening">Account Opening</option>
-                            <option value="Loan Inquiry">Loan Inquiry</option>
+                            <option value="Loan Inquiry">Loan Enquiry</option>
                             <option value="Card Services">Card Services</option>
                             <option value="General Query">General Query</option>
                         </select>
