--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ background: linear-gradient(133deg, rgba(0,29,45,1) 0%, rgba(42,88,116,1) 57%, r
 </head>
 <body>
     <div class="container">
-        <h1>Select Your Bank</h1>
+        <h1>Select Your Bank 🏦</h1>
         <!-- Search Bar -->
         <input
             type="text"
