--- a/index1.html
+++ b/index1.html
@@ -100,7 +100,7 @@ background: linear-gradient(133deg, rgba(0,29,45,1) 0%, rgba(42,88,116,1) 57%, r
                         </select>
                     </div>
                     <div class="mb-3">
-                        <label for="issue" class="form-label">Select Issue</label>
+                        <label for="issue" class="form-label">Select Purpose</label>
                         <br>
                         <select id="issue" class="form-select" required>
                             <option value="" disabled selected>Select the Purpose</option>
